Changed registeration logic
Added two methods for registeration
Added a check for availabilty
